# My4X

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/src/: main.cpp
docs/: phase2-execution-plan.md
docs/superpowers/plans/: 2026-03-21-terrain-foundation.md
docs/superpowers/specs/: 2026-03-17-project-setup-design.md
engine/: CMakeLists.txt
engine/include/engine/: AnimationController.h  AudioManager.h  BuildingRenderer.h  Camera.h  CameraCinematic.h  CityRenderer.h  CombatEffects.h  CombatLogRenderer.h  DiplomacyColors.h  EdgeVertices.h  EndTurnButton.h  FactionColors.h  HexEdgeType.h  HexGrid.h  HexMeshBuilder.h  HexMetrics.h  Input.h  MapRenderer.h  MenuSystem.h  Minimap.h  ModelManager.h  ParticleSystem.h  PerlinNoise.h  RangeOverlay.h  TerrainColors.h  TerrainHeight.h  Tooltip.h  Transition.h  UnitAnimator.h  UnitRenderer.h  Window.h
engine/src/: AnimationController.cpp  AudioManager.cpp  BuildingRenderer.cpp  Camera.cpp  CameraCinematic.cpp  CityRenderer.cpp  CombatEffects.cpp  CombatLogRenderer.cpp  EndTurnButton.cpp  HexDraw.h  HexGrid.cpp  HexMeshBuilder.cpp  Input.cpp  MapRenderer.cpp  MenuSystem.cpp  Minimap.cpp  ModelManager.cpp  ParticleSystem.cpp  PerlinNoise.cpp  RangeOverlay.cpp  Tooltip.cpp  Transition.cpp  UnitAnimator.cpp  UnitRenderer.cpp  Window.cpp
game/: CMakeLists.txt
game/include/game/: ActionProcessor.h  AttackAction.h  BuildQueue.h  Building.h  CaptureAction.h  City.h  Combat.h  CombatLog.h  DiplomacyManager.h  Faction.h  FactionRegistry.h  FogOfWar.h  GamePersistence.h  GameSession.h  GameState.h  HexDirection.h  LobbyManager.h  Map.h  MapGenerator.h  MoveAction.h  NeutralAI.h  Pathfinding.h  PredictionManager.h  ReconnectionManager.h  Resource.h  SaveLoad.h  Serialization.h  TerrainType.h  Tile.h  TileCoord.h  TileRegistry.h  TurnManager.h  TurnResolver.h  Unit.h  UnitTemplate.h  UnitTypeRegistry.h  Warrior.h  ZoneOfControl.h
game/src/: ActionProcessor.cpp  AttackAction.cpp  BuildQueue.cpp  Building.cpp  CaptureAction.cpp  City.cpp  Combat.cpp  CombatLog.cpp  DiplomacyManager.cpp  Faction.cpp  FactionRegistry.cpp  FogOfWar.cpp  GamePersistence.cpp  GameSession.cpp  GameState.cpp  LobbyManager.cpp  Map.cpp  MapGenerator.cpp  MoveAction.cpp  NeutralAI.cpp  Pathfinding.cpp  PredictionManager.cpp  ReconnectionManager.cpp  Resource.cpp  SaveLoad.cpp  Serialization.cpp  Tile.cpp  TileRegistry.cpp  TurnManager.cpp  TurnResolver.cpp  Unit.cpp  UnitTypeRegistry.cpp  Warrior.cpp  ZoneOfControl.cpp
network/: CMakeLists.txt
network/include/network/: NetworkClient.h
network/src/: NetworkClient.cpp
proto/: CMakeLists.txt  building.proto  city.proto  common.proto  game_action.proto  game_event.proto  game_service.proto  game_state.proto  lobby.proto  lobby_service.proto  map.proto  resource.proto  tile.proto  unit.proto
server/: CMakeLists.txt
server/src/: GameServiceImpl.cpp  GameServiceImpl.h  LobbyServiceImpl.cpp  LobbyServiceImpl.h  main.cpp
tests/: CMakeLists.txt
tests/engine/: test_animation_controller.cpp  test_audio_manager.cpp  test_camera_cinematic.cpp  test_combat_effects.cpp  test_diplomacy_colors.cpp  test_faction_colors.cpp  test_hex_grid.cpp  test_hex_mesh_builder.cpp  test_menu_system.cpp  test_model_manager.cpp  test_particle_system.cpp  test_perlin_noise.cpp  test_transition.cpp  test_unit_animator.cpp
tests/game/: test_action_processor.cpp  test_attack_action.cpp  test_build_queue.cpp  test_building.cpp  test_capture_action.cpp  test_city.cpp  test_combat.cpp  test_combat_log.cpp  test_diplomacy_manager.cpp  test_faction.cpp  test_faction_registry.cpp  test_faction_ui_data.cpp  test_fog_of_war.cpp  test_game_persistence.cpp  test_game_session.cpp  test_game_state.cpp  test_hex_direction.cpp  test_lobby_manager.cpp  test_map_generator.cpp  test_movement_range.cpp  test_networking_integration.cpp  test_neutral_ai.cpp  test_pathfinding.cpp  test_prediction_manager.cpp  test_reconnection_manager.cpp  test_resource.cpp  test_save_load.cpp  test_serialization.cpp  test_terrain.cpp  test_terrain_defense.cpp  test_terrain_movement.cpp  test_tile_registry.cpp  test_turn_manager.cpp  test_turn_resolver.cpp  test_unit.cpp  test_unit_death_cleanup.cpp  test_unit_experience.cpp  test_unit_production.cpp  test_unit_template.cpp  test_zone_of_control.cpp
tests/network/: test_network_client.cpp
